--- a/views/login.ejs
+++ b/views/login.ejs
@@ -48,7 +48,7 @@
                     </form>
                     <form action="/signup">
                       <div class="text-center mt-2">
-                        <button type="submit">New here? Please Sign up</button>
+                        <button class="btn btn-outline-primary" type="submit">New here? Please Sign up</button>
                       </div>
                     </form>
             </div>
