--- a/views/updateUser.ejs
+++ b/views/updateUser.ejs
@@ -3,17 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
     <title>Document</title>
 </head>
 <body>
-    <form action="/admin/updateUser" method="post">
-        <input type="hidden" name="oldUsername" value="<%= oldName %>">
-        <label for="">New username</label>
-        <input type="text" name="newUsername">
-        <button type="submit">updateName</button>
-    </form>
-    <form action="/admin">
-        <button type="submit">go back</button>
-    </form>
+    
+
+    <div style="margin-top: 300px;width: 40%;margin: 300px auto ;">
+        <!-- <form action="/admin/updateUser" method="post">
+            <input type="hidden" name="oldUsername" value="<%= oldName %>">
+            <label for="">New username</label>
+            <input type="text" name="newUsername">
+            <button type="submit">updateName</button>
+        </form>
+        <form action="/admin">
+            <button type="submit">go back</button>
+        </form> -->
+
+        <form action="/admin/updateUser" method="post">
+            <div class="mb-3">
+              <input type="hidden" name="oldUsername" value="<%= oldName %>">
+              <label for="exampleInputPassword1" class="form-label">Username</label>
+              <input type="text" class="form-control" name="newUsername" id="exampleInputPassword1">
+            </div>
+            <button type="submit" class="btn btn-primary" >update</button>
+          </form>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
 </body>
 </html>
